# r_chat

./: Cargo.toml  README.md
src/: db.rs  main.rs  models.rs  routers.rs  schema.rs
src/constant/: server.rs  session.rs
src/http_server/: chat.rs  create_user.rs  get_conversation.rs  get_room.rs  get_user.rs  html.rs  mod.rs  val.rs
src/server/: chat.rs  message_model.rs  mod.rs  session.rs
