[package]
name = "rust-react-chat"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.5"
actix-files = "0.6.6"
actix-web = "4.9.0"
actix-web-actors = "4.3.1"
rand = "0.8.5"
serde = {version = "1.0.210" , features = ["derive"]}
serde_json = "1.0.128"
diesel = { version = "2.0.0", features = ["r2d2", "sqlite"] }
chrono = "0.4.38"
dotenvy = "0.15"
uuid = {version = "1.10.0" , features = ["v4","fast-rng","macro-diagnostics","serde"]}
actix-cors = "0.7.0"
